searching function first draft

--- a/bot/templates/bot/results.html
+++ b/bot/templates/bot/results.html
@@ -6,4 +6,13 @@
         {% if letters %}
         Here are your letters: {{ letters.upper }}
         {% endif %}
+
+        {% if words %}
+        <h3>Results:</h3>
+            {% for word in words %}
+                {{ word }}<br>
+            {% endfor %}
+        {% endif %}
+
+        
 {% endblock %}
