--- a/bot/templates/bot/layout.html
+++ b/bot/templates/bot/layout.html
@@ -30,11 +30,19 @@
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+            <li class="nav-item active">
+              {% if user.is_authenticated %}
+              <a class="nav-link" href="{% url 'logout' %}">Wyloguj</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'login' %}">Logowanie</a>
+              {% endif %}
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="#">Zalogowano jako <strong>{{ user.username }}</strong>.</a>
+                {% else %}
+                    <a class="nav-link" href="#">Nie zalogowano.</a>
+                {% endif %}
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
@@ -52,7 +60,7 @@
         
         {% endblock %}
       </main>
-      <footer class="mastfoot mt-auto">
+      <footer class="mastfoot mx-auto mt-auto">
         <div class="inner">
           <p>SłowotokBot by <a href="https://github.com/Arkenin/">Arkenin</a>. Copyright ©2022</p>
         </div>
