deploying with new style

--- a/bot/templates/bot/index.html
+++ b/bot/templates/bot/index.html
@@ -10,5 +10,8 @@
         {{ form }}
         <input type="submit">
     </form>
+    {% if message %}
+    <div>{{ message }}</div>
+    {% endif %}
   </div>
 {% endblock %}
