--- a/bot/templates/bot/layout.html
+++ b/bot/templates/bot/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{% static 'bot/favicon.ico' %}"> 
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Botuj ze SłowotokBotem ;)</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -52,12 +52,12 @@
         </div>
       </nav>  
     </header>
-    <div class="container">
+
+    <div class="container cover-shadow">
       <div class="d-flex h-100 p-3 mx-auto flex-column">
         
-        <main role="main" class="container"></main>
+      <main role="main" class="container"></main>
         {% block body %}
-        
         {% endblock %}
       </main>
       <footer class="mastfoot mx-auto mt-auto">
@@ -68,13 +68,6 @@
       
       </div>
     </div>
-
-<!-- 
-      <footer class="mx-auto">
-        <div class="inner">
-          <p>SłowotokBot by <a href="https://github.com/Arkenin/">Arkenin</a>. Copyright ©2022</p>
-        </div>
-      </footer> -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
